--- a/r619ac.config
+++ b/r619ac.config
@@ -11,7 +11,7 @@ CONFIG_TARGET_ipq40xx_generic_DEVICE_p2w_r619ac-128m=y
 # CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 
 # 固件压缩:
-CONFIG_TARGET_IMAGES_GZIP=y
+# CONFIG_TARGET_IMAGES_GZIP=y
 
 # IPv6支持:
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
@@ -66,7 +66,7 @@ CONFIG_PACKAGE_luci-app-transmission=y
 # CONFIG_PACKAGE_luci-app-familycloud is not set
 # CONFIG_PACKAGE_luci-app-openvpn is not set
 # CONFIG_DEFAULT_luci-app-flowoffload is not set
-# CONFIG_PACKAGE_luci-app-aria2 is not set
+CONFIG_PACKAGE_luci-app-aria2=y
 # CONFIG_DEFAULT_luci-app-sqm is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
 # CONFIG_PACKAGE_luci-app-rp-pppoe-server is not set
